# ran-synthetic-data

./: .gitignore  CHANGELOG.md  CITATION.cff  LICENSE  NOTICE  README.md  pyproject.toml
docs/: kpi-catalogue.md  methodology.md
docs/scenarios/: A-energy-saving-sleep.md  B-coverage-problem-onset.md  C-mlb-regime-change.md  D-mro-handover-bursts.md  E-slice-sla-assurance.md  F-failure-prediction.md  G-signalling-storm.md  H-handover-target-saturation.md  S-stationary-control.md
generator/src/ranfst/: __init__.py  cli.py
generator/src/ranfst/events/: __init__.py
generator/src/ranfst/kpis/: __init__.py
generator/src/ranfst/scenarios/: __init__.py  _common.py  base.py  scenario_a_energy_sleep.py  scenario_b_coverage_onset.py  scenario_c_mlb.py  scenario_d_handover_bursts.py  scenario_e_slice_sla.py  scenario_f_failure_prediction.py  scenario_g_signalling_storm.py  scenario_h_handover_saturation.py  scenario_s_stationary.py
generator/tests/: __init__.py  test_scenarios.py
tools/: export_loss_scenarios.py  generate_35d_csvs.py
