[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ranfst"
version = "0.0.5"
description = "RAN synthetic telemetry generator — reproducible per-cell, per-KPI time series for forecasting and anomaly-detection benchmarks."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
    { name = "Roman Ferrando", email = "roman.f@thingbook.io" },
]
keywords = ["ran", "5g", "telecom", "synthetic-data", "benchmark", "3gpp", "o-ran"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Telecommunications Industry",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "numpy>=1.26",
    "pandas>=2.1",
    "pyarrow>=14",
    "scipy>=1.11",
    "click>=8.1",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.1",
    "mypy>=1.7",
]

[project.scripts]
ranfst = "ranfst.cli:main"

[tool.setuptools.packages.find]
where = ["generator/src"]

[tool.setuptools.package-dir]
"" = "generator/src"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["generator/tests"]
addopts = "-ra --strict-markers --strict-config"
